Finished commit week 2
Commited some other classes in the domain package

--- a/WebContent/welcome.html
+++ b/WebContent/welcome.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Car Selection Page</title>
+    <title>Hotel Selection Page</title>
     <style type="text/css">
         .style1
         {
@@ -14,7 +14,7 @@
 <body>
     <form id="welcomeForm">
     <div>
-        <p title="Car Selection Page"> <b>Welcome to the Car Selection Page!!</b>
+        <p title="Car Selection Page"> <b>Welcome to the Hotel Selection Page!!</b>
          </p>
          <p> This is just a place holder page.</p>
     </div>
