--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -59,24 +59,24 @@ function Submit1_onclick() {
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>                    
-                   <img alt="Ascari" src="Images/ascari-a10-front.jpg" 
-                        style="width: 133px; height: 100px" title="Ascari A10" />
+                   <img alt="Single" src="Images/Single.jpg" 
+                        style="width: 133px; height: 100px" title="Single bed" />
                    <img alt="FerrariFXX" 
-                        src="Images/black-ferrari-fxx-front.jpg" style="width: 133px; height: 100px" 
+                        src="Images/queen.jpg" style="width: 133px; height: 100px" 
                         title="FerrariFXX" />
-                   <img alt="Porsche911GT3" src="Images/porsche-911-gt3-speeding.jpg" style="width: 133px; height: 100px" 
-                        title="Porsche911GT3" />
-                   <img alt="FordShelby" 
-                        src="Images/white-ford-shelby-gt500-front.jpg" 
-                        style="width: 133px; height: 100px" title="FordShelby" />
+                   <img alt="Queen" src="Images/queen.jpg" style="width: 133px; height: 100px" 
+                        title="Queen bed" />
+                   <img alt="King" 
+                        src="Images/King.jpg" 
+                        style="width: 133px; height: 100px" title="King bed" />
                 </td>
             </tr>
         </table>
     </center>                
     <center>
 
-        <p style="padding: 6px; margin: 6px; font-weight: bold; color: #0000FF"> Welcome to FleetRental - 
-            Your Sports Car Rental Site!</p>    
+        <p style="padding: 6px; margin: 6px; font-weight: bold; color: #0000FF"> Welcome to HuangsHotelReservation - 
+            Your best place to stay for the vacation!</p>    
 
         <center>
             &nbsp;
@@ -104,7 +104,7 @@ function Submit1_onclick() {
                      Username/Email :
                  </td>
                  <td class="style4">
-                     <input type="text" name="email" value="homer@nukliare.com"/>							
+                     <input type="text" name="email" value="jayhuang@hotmail.com"/>							
                  </td>
              </tr>
              <tr>
@@ -113,7 +113,7 @@ function Submit1_onclick() {
    Password :
                  </td>
                  <td class="style4">
-                     <input type="password" name="password" value="duff"/>								
+                     <input type="password" name="password" value="123456"/>								
                  </td>
              </tr>
              <tr>
